--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "tqdm>=4.66.4",
     "tabulate>=0.9.0",
     "datasets>=2.20.0",
+    "together>=0.2.8",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
